# rust-rocket-web-server

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/routes/: echo.rs  mod.rs  user.rs
