[package]
name = "rust-rocket-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["helmet"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.94"
